--- a/folioreader/src/main/assets/css/Style.css
+++ b/folioreader/src/main/assets/css/Style.css
@@ -57,52 +57,92 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
 tbody, tfoot, thead {
     vertical-align: middle !important;
 }
+
 td, th, tr {
     vertical-align: inherit !important;
 }
 
 /* List */
-dd, dir, menu, ol, ul { margin-left: 30px !important; }
-ol { list-style-type: decimal !important; }
-li { display: list-item !important; }
+dd, dir, menu, ol, ul {
+    margin-left: 30px !important;
+}
+
+ol {
+    list-style-type: decimal !important;
+}
+
+li {
+    display: list-item !important;
+}
+
 ol ol, ol ul, ul ol, ul ul {
     margin-bottom: 0 !important;
     margin-top: 0 !important;
 }
 
 /* Links */
-a { -webkit-touch-callout: none; } /* Disable link callback */
-* { -webkit-user-select: text; }
-img { -webkit-user-select: none; }
+a {
+    -webkit-touch-callout: none;
+}
+
+/* Disable link callback */
+* {
+    -webkit-user-select: text;
+}
+
+img {
+    -webkit-user-select: none;
+}
+
 p {
     margin: 1.3em 0 1.5em 0;
     line-height: 1.40em !important;
     text-indent: 1.25em;
 }
-b, strong, th {font-weight: bolder !important;}
+
+b, strong, th {
+    font-weight: bolder !important;
+}
 
 /* Forced font overrides */
 code, kbd, pre, samp, tt {
     font-family: monospace, monospace !important;
     font-size: 1rem;
 }
-button, input, select, textarea { display: inline-block !important; }
+
+button, input, select, textarea {
+    display: inline-block !important;
+}
+
 /*h1, h2, h3, h4, h5, h6 { font-weight: 400!important; }*/
-del, s, strike { text-decoration: line-through!important; }
+del, s, strike {
+    text-decoration: line-through !important;
+}
+
 hr {
-    background-color: rgba(0,0,0,.1) !important;
+    background-color: rgba(0, 0, 0, .1) !important;
     border: none !important;
     height: 1px !important;
 }
 
 
 /* Sub and Super */
-big { font-size: 1.15rem !important; }
-small, sub, sup { font-size: .65rem !important; }
-sub { vertical-align: sub !important; }
+big {
+    font-size: 1.15rem !important;
+}
+
+small, sub, sup {
+    font-size: .65rem !important;
+}
+
+sub {
+    vertical-align: sub !important;
+}
+
 sup {
     font-family: monospace !important;
     vertical-align: super !important;
@@ -110,11 +150,23 @@ sup {
 
 
 /* iBooks like */
-a { text-decoration: none; }
-pre { white-space: pre-wrap; }
-@page { margin: 0 0 !important; }
-table, ol, il { text-align: -webkit-auto; }
-h1 ,h2 ,h3 ,h4 ,h5 ,h6 {
+a {
+    text-decoration: none;
+}
+
+pre {
+    white-space: pre-wrap;
+}
+
+@page {
+    margin: 0 0 !important;
+}
+
+table, ol, il {
+    text-align: -webkit-auto;
+}
+
+h1, h2, h3, h4, h5, h6 {
     text-align: -webkit-auto;
     text-rendering: optimizelegibility;
 }
@@ -139,10 +191,21 @@ img, svg, audio, video {
 
 /* Divs are also used to size images so make sure the authors get what they intended */
 /* which is for the images boxed in them to be completely visible on screen */
-div { max-width: 100%; }
-aside[epub|type~="footnote"] { display: none !important; }
-ruby > rt, ruby > rp { -webkit-user-select: none; }
-* { -webkit-font-smoothing: subpixel-antialiased }
+div {
+    max-width: 100%;
+}
+
+aside[epub|type~="footnote"] {
+    display: none !important;
+}
+
+ruby > rt, ruby > rp {
+    -webkit-user-select: none;
+}
+
+* {
+    -webkit-font-smoothing: subpixel-antialiased
+}
 
 
 /*
@@ -158,14 +221,26 @@ lk {
 
 /* Remove tap highlight */
 input, textarea, button, highlight, select, a {
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 /* Highlight styles */
-html .highlight_yellow {background:rgb(255, 235, 107)}
-html .highlight_green {background:#C0ED72}
-html .highlight_blue {background:#ADD8FF}
-html .highlight_pink {background:#FFB0CA}
+html .highlight_yellow {
+    background: rgb(255, 235, 107)
+}
+
+html .highlight_green {
+    background: #C0ED72
+}
+
+html .highlight_blue {
+    background: #ADD8FF
+}
+
+html .highlight_pink {
+    background: #FFB0CA
+}
+
 html .highlight_underline {
     text-decoration: none;
     border-bottom: 2px solid #F02814;
@@ -186,7 +261,6 @@ html .highlight_yellow, html .highlight_green, html .highlight_blue, html .highl
     border-bottom: dotted 2px transparent;
     border-radius: 0;
 }
-
 
 
 /*
@@ -216,11 +290,25 @@ html.nightMode {
     color: #848484 !important;
 }
 
-html.nightMode .highlight_yellow {background:rgba(255, 235, 107, 0.9)}
-html.nightMode .highlight_green {background:rgba(192, 237, 114, 0.9)}
-html.nightMode .highlight_blue {background:rgba(173, 216, 255, 0.9)}
-html.nightMode .highlight_pink {background:rgba(255, 176, 202, 0.9)}
-html.nightMode .highlight_underline {border-bottom: 2px solid rgba(240, 40, 20, 0.6)}
+html.nightMode .highlight_yellow {
+    background: rgba(255, 235, 107, 0.9)
+}
+
+html.nightMode .highlight_green {
+    background: rgba(192, 237, 114, 0.9)
+}
+
+html.nightMode .highlight_blue {
+    background: rgba(173, 216, 255, 0.9)
+}
+
+html.nightMode .highlight_pink {
+    background: rgba(255, 176, 202, 0.9)
+}
+
+html.nightMode .highlight_underline {
+    border-bottom: 2px solid rgba(240, 40, 20, 0.6)
+}
 
 
 /*
@@ -232,18 +320,22 @@ html.nightMode .highlight_underline {border-bottom: 2px solid rgba(240, 40, 20, 
     font-family: 'amiri';
     src: url('file:///android_asset/fonts/amiri_regular.ttf');
 }
+
 @font-face {
     font-family: 'flat';
     src: url('file:///android_asset/fonts/flat_regular.ttf');
 }
+
 @font-face {
     font-family: 'gulzar';
     src: url('file:///android_asset/fonts/gulzar_regular.ttf');
 }
+
 @font-face {
     font-family: 'jozoor';
     src: url('file:///android_asset/fonts/jozoor_regular.ttf');
 }
+
 @font-face {
     font-family: 'kitab';
     src: url('file:///android_asset/fonts/kitab_regular.ttf');
@@ -253,26 +345,32 @@ html.nightMode .highlight_underline {border-bottom: 2px solid rgba(240, 40, 20, 
     font-family: 'kufi';
     src: url('file:///android_asset/fonts/kufi_regular.ttf');
 }
+
 @font-face {
     font-family: 'messiri';
     src: url('file:///android_asset/fonts/messiri_regular.ttf');
 }
+
 @font-face {
     font-family: 'naskh';
     src: url('file:///android_asset/fonts/naskh_regular.ttf');
 }
+
 @font-face {
     font-family: 'naskh_2';
     src: url('file:///android_asset/fonts/naskh_2_regular.ttf');
 }
+
 @font-face {
     font-family: 'naskh_3';
     src: url('file:///android_asset/fonts/naskh_3_regular.ttf');
 }
+
 @font-face {
     font-family: 'reqa';
     src: url('file:///android_asset/fonts/reqa_regular.ttf');
 }
+
 @font-face {
     font-family: 'tajawal';
     src: url('file:///android_asset/fonts/tajawal_regular.ttf');
@@ -326,49 +424,72 @@ html.nightMode .highlight_underline {border-bottom: 2px solid rgba(240, 40, 20, 
     font-family: 'tajawal', sans-serif;
 }
 
-html.textSizeOne { font-size: 13px !important; }
-html.textSizeTwo { font-size: 15px !important; }
-html.textSizeThree { font-size: 17px !important; }
-html.textSizeFour { font-size: 19px !important; }
-html.textSizeFive { font-size: 21px !important; }
+html.textSizeOne {
+    font-size: 13px !important;
+}
+
+html.textSizeTwo {
+    font-size: 15px !important;
+}
+
+html.textSizeThree {
+    font-size: 17px !important;
+}
+
+html.textSizeFour {
+    font-size: 19px !important;
+}
+
+html.textSizeFive {
+    font-size: 21px !important;
+}
 
 h1 {
     font-size: 2rem;
     line-height: 1.2;
 }
+
 h2 {
     font-size: 1.5rem;
     line-height: 1.2;
 }
+
 h3 {
     font-size: 1.17rem;
     line-height: 1.2;
 }
+
 h4 {
     font-size: 1rem;
     line-height: 1.2;
 }
+
 h5 {
     font-size: 0.83rem;
     line-height: 1.2;
 }
+
 h6 {
     font-size: 0.67rem;
     line-height: 1.2;
 }
+
 body {
     word-break: break-word !important;
     -webkit-hyphens: auto !important;
     hyphens: auto !important;
 }
+
 p, span, div {
     line-height: 1.5 !important;
 }
+
 @media only screen and (min-device-width: 600px) {
     div {
         font-size: 1rem;
         line-height: 1.438em !important;
     }
+
     body {
         -webkit-hyphens: none !important;
         hyphens: none !important;
